fixed cursor when hovering over buttons,aligned back and next buttons across pages

--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ button{
 }
 .contained {
     background: #0F56B3;
-    color: #C5DCFA
+    color: #C5DCFA;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .button-contents{
     display: flex;
@@ -132,6 +134,6 @@ button{
     align-items: center;
 }
 .survey-end > img {
-    width: 400px;
-    height: 400px;
+    width: 344px;
+    height: 240px;
 }
